# rust-clean-template

./: Cargo.toml  README.md  cargo-generate.toml
src/: main.rs
